# shitspeak-rs

./: Cargo.toml  build.rs
src/: acl.rs  channels.rs  client_certificate_verifier.rs  client_repository.rs  codec_info.rs  config.rs  constants.rs  geoip.rs  main.rs  protocol_version.rs  proxy_protocol.rs  server.rs  types.rs
src/client/: client.rs  client_global_state.rs  client_local_state.rs  client_session_identifier.rs  client_session_state.rs  client_stats.rs  group.rs  mod.rs  options.rs  session_states.rs  states.rs  udp_state.rs  user_info.rs  user_version.rs  voice_target.rs
src/messages/: message.rs  message_reader.rs  message_type.rs  message_writer.rs  mod.rs
src/messages/handlers/: acl.rs  ban_list.rs  channel_remove.rs  channel_state.rs  crypt_setup.rs  mod.rs  permission_query.rs  ping.rs  query_users.rs
src/messages/macros/: Cargo.toml
src/messages/macros/src/: lib.rs
src/voice_crypto/: mod.rs
