[package]
name = "shitspeak-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
cidr = "0.3.2"
enumflags2 = "0.7.12"
hex = "0.4.3"
maxminddb = { version = "0.26.0", features = ["mmap", "simdutf8"] }
parking_lot = { version = "0.12.3", features = ["arc_lock", "hardware-lock-elision"] }
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"

[build-dependencies]
prost-build = "0.13.5"
